--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,7 +4,7 @@
 
 <head>
     <title>About</title>
-    <link rel="icon" href="/web-server/public/img/robot.jpg">
+    <link rel="icon" href="/web-server/public/img/robot.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
