--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,14 +4,15 @@
 
 <head>
     <title>About</title>
-    <link rel="icon" href="/web-server/public/img/robot.png">
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="./img/express.png.jpg">
+        <p>This site was created by Chukwuma Ajunwa. It uses data from mapbox.com and darksky.net</p>
+        <img class="portrait" src="./img/robot.png">
         <p>Created by {{name}}</p>
     </div>
      {{>footer}}
